Show image in FormulaFragment

--- a/app/src/main/res/layout/fragment_formula.xml
+++ b/app/src/main/res/layout/fragment_formula.xml
@@ -40,317 +40,10 @@
             android:layout_marginBottom="16dp"/>
 
         <LinearLayout
-            android:id="@+id/formula_list"
+            android:id="@+id/formula_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/formula_item_1"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C1"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c1"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_2"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C2"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_3"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C3"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_4"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C4"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_5"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C5"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_6"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C6"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_7"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C7"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_8"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C8"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/formula_item_9"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Công thức C9"
-                    style="@style/LessonTextStyle"/>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_formula_9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_formula_9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_formula_c2"/>
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
+            android:orientation="vertical"
+            android:padding="16dp" />
     </LinearLayout>
 </ScrollView>
